--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   lottie: ^2.6.0
   rive: ^0.11.17
   animations: ^2.0.8
+  flutter_animate: ^4.2.0+1
 
 dev_dependencies:
   flutter_test:
